# foxysafe

./: .env.example  .gitignore  LICENSE  Makefile  README.md  default_config.yaml  pyproject.toml  requirements.txt
foxysafe/: __init__.py  entrypoints.py
foxysafe/custom_hydra_plugins/: __init__.py  resolvers.py
foxysafe/git/: clone.py
foxysafe/gitlab/: __init__.py  api.py  backups.py  download.py
foxysafe/utils/: custom_logging.py
